--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     </head>
     <body>
         <div id="todoapp" ng-controller="todoController as todoCtrl">
-            The message is: {{ todoCtrl.msg }}
+            The message is: {{ todoCtrl.msg }}@
         </div>
         <script type="text/javascript" src="js/app.js"></script>
         <script type="text/javascript" src="js/controllers/todoController.js"></script>
